// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: bar seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo → *",
        },
        "group": "cmd",
        "id": "6",
        "type": "emit",
      },
      "group": "step",
      "id": "5",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "fn": [Function],
                },
                "group": "cmd",
                "id": "u",
                "type": "compute",
              },
              "group": "step",
              "id": "t",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "fn": [Function],
                },
                "group": "cmd",
                "id": "w",
                "type": "filter",
              },
              "group": "step",
              "id": "v",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Object {
                    "data": Object {
                      "fn": [Function],
                    },
                    "group": "cmd",
                    "id": "i",
                    "type": "filter",
                  },
                  "group": "step",
                  "id": "h",
                  "type": "single",
                },
                Object {
                  "data": Object {
                    "data": Object {
                      "store": Object {
                        "current": "foo | 1 | 11",
                        "id": "1",
                      },
                    },
                    "group": "cmd",
                    "id": "k",
                    "type": "update",
                  },
                  "group": "step",
                  "id": "j",
                  "type": "single",
                },
                Object {
                  "data": Array [
                    Object {
                      "data": Array [
                        Object {
                          "data": Object {
                            "data": Object {
                              "fn": [Function],
                            },
                            "group": "cmd",
                            "id": "1g",
                            "type": "compute",
                          },
                          "group": "step",
                          "id": "1f",
                          "type": "single",
                        },
                        Object {
                          "data": Object {
                            "data": Object {
                              "fn": [Function],
                            },
                            "group": "cmd",
                            "id": "1i",
                            "type": "filter",
                          },
                          "group": "step",
                          "id": "1h",
                          "type": "single",
                        },
                        Object {
                          "data": Array [
                            Object {
                              "data": Object {
                                "data": Object {
                                  "fn": [Function],
                                },
                                "group": "cmd",
                                "id": "14",
                                "type": "filter",
                              },
                              "group": "step",
                              "id": "13",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "store": Object {
                                    "current": 12,
                                    "id": "2",
                                  },
                                },
                                "group": "cmd",
                                "id": "16",
                                "type": "update",
                              },
                              "group": "step",
                              "id": "15",
                              "type": "single",
                            },
                            Object {
                              "data": Array [],
                              "group": "step",
                              "id": "17",
                              "type": "multi",
                            },
                          ],
                          "group": "step",
                          "id": "18",
                          "type": "seq",
                        },
                        Object {
                          "data": Array [],
                          "group": "step",
                          "id": "1j",
                          "type": "multi",
                        },
                      ],
                      "group": "step",
                      "id": "1k",
                      "type": "seq",
                    },
                  ],
                  "group": "step",
                  "id": "l",
                  "type": "multi",
                },
              ],
              "group": "step",
              "id": "m",
              "type": "seq",
            },
            Object {
              "data": Array [],
              "group": "step",
              "id": "x",
              "type": "multi",
            },
          ],
          "group": "step",
          "id": "y",
          "type": "seq",
        },
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "fn": [Function],
                },
                "group": "cmd",
                "id": "1m",
                "type": "run",
              },
              "group": "step",
              "id": "1l",
              "type": "single",
            },
            Object {
              "data": Array [],
              "group": "step",
              "id": "1n",
              "type": "multi",
            },
          ],
          "group": "step",
          "id": "1o",
          "type": "seq",
        },
      ],
      "group": "step",
      "id": "7",
      "type": "multi",
    },
  ],
  "group": "step",
  "id": "8",
  "type": "seq",
}
`;

exports[`graphite: bar seq 2`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo → *",
        },
        "group": "cmd",
        "id": "6",
        "type": "emit",
      },
      "group": "step",
      "id": "5",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "fn": [Function],
                },
                "group": "cmd",
                "id": "u",
                "type": "compute",
              },
              "group": "step",
              "id": "t",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "fn": [Function],
                },
                "group": "cmd",
                "id": "w",
                "type": "filter",
              },
              "group": "step",
              "id": "v",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Object {
                    "data": Object {
                      "fn": [Function],
                    },
                    "group": "cmd",
                    "id": "i",
                    "type": "filter",
                  },
                  "group": "step",
                  "id": "h",
                  "type": "single",
                },
                Object {
                  "data": Object {
                    "data": Object {
                      "store": Object {
                        "current": "foo | 1 | 11",
                        "id": "1",
                      },
                    },
                    "group": "cmd",
                    "id": "k",
                    "type": "update",
                  },
                  "group": "step",
                  "id": "j",
                  "type": "single",
                },
                Object {
                  "data": Array [
                    Object {
                      "data": Array [
                        Object {
                          "data": Object {
                            "data": Object {
                              "fn": [Function],
                            },
                            "group": "cmd",
                            "id": "1g",
                            "type": "compute",
                          },
                          "group": "step",
                          "id": "1f",
                          "type": "single",
                        },
                        Object {
                          "data": Object {
                            "data": Object {
                              "fn": [Function],
                            },
                            "group": "cmd",
                            "id": "1i",
                            "type": "filter",
                          },
                          "group": "step",
                          "id": "1h",
                          "type": "single",
                        },
                        Object {
                          "data": Array [
                            Object {
                              "data": Object {
                                "data": Object {
                                  "fn": [Function],
                                },
                                "group": "cmd",
                                "id": "14",
                                "type": "filter",
                              },
                              "group": "step",
                              "id": "13",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "store": Object {
                                    "current": 12,
                                    "id": "2",
                                  },
                                },
                                "group": "cmd",
                                "id": "16",
                                "type": "update",
                              },
                              "group": "step",
                              "id": "15",
                              "type": "single",
                            },
                            Object {
                              "data": Array [],
                              "group": "step",
                              "id": "17",
                              "type": "multi",
                            },
                          ],
                          "group": "step",
                          "id": "18",
                          "type": "seq",
                        },
                        Object {
                          "data": Array [],
                          "group": "step",
                          "id": "1j",
                          "type": "multi",
                        },
                      ],
                      "group": "step",
                      "id": "1k",
                      "type": "seq",
                    },
                  ],
                  "group": "step",
                  "id": "l",
                  "type": "multi",
                },
              ],
              "group": "step",
              "id": "m",
              "type": "seq",
            },
            Object {
              "data": Array [],
              "group": "step",
              "id": "x",
              "type": "multi",
            },
          ],
          "group": "step",
          "id": "y",
          "type": "seq",
        },
      ],
      "group": "step",
      "id": "7",
      "type": "multi",
    },
  ],
  "group": "step",
  "id": "8",
  "type": "seq",
}
`;

exports[`graphite: foo seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fullName": "foo",
        },
        "group": "cmd",
        "id": "2",
        "type": "emit",
      },
      "group": "step",
      "id": "1",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "fn": [Function],
                },
                "group": "cmd",
                "id": "a",
                "type": "compute",
              },
              "group": "step",
              "id": "9",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Object {
                    "data": Object {
                      "fullName": "foo → *",
                    },
                    "group": "cmd",
                    "id": "6",
                    "type": "emit",
                  },
                  "group": "step",
                  "id": "5",
                  "type": "single",
                },
                Object {
                  "data": Array [
                    Object {
                      "data": Array [
                        Object {
                          "data": Object {
                            "data": Object {
                              "fn": [Function],
                            },
                            "group": "cmd",
                            "id": "u",
                            "type": "compute",
                          },
                          "group": "step",
                          "id": "t",
                          "type": "single",
                        },
                        Object {
                          "data": Object {
                            "data": Object {
                              "fn": [Function],
                            },
                            "group": "cmd",
                            "id": "w",
                            "type": "filter",
                          },
                          "group": "step",
                          "id": "v",
                          "type": "single",
                        },
                        Object {
                          "data": Array [
                            Object {
                              "data": Object {
                                "data": Object {
                                  "fn": [Function],
                                },
                                "group": "cmd",
                                "id": "i",
                                "type": "filter",
                              },
                              "group": "step",
                              "id": "h",
                              "type": "single",
                            },
                            Object {
                              "data": Object {
                                "data": Object {
                                  "store": Object {
                                    "current": "foo | 1 | 11",
                                    "id": "1",
                                  },
                                },
                                "group": "cmd",
                                "id": "k",
                                "type": "update",
                              },
                              "group": "step",
                              "id": "j",
                              "type": "single",
                            },
                            Object {
                              "data": Array [
                                Object {
                                  "data": Array [
                                    Object {
                                      "data": Object {
                                        "data": Object {
                                          "fn": [Function],
                                        },
                                        "group": "cmd",
                                        "id": "1g",
                                        "type": "compute",
                                      },
                                      "group": "step",
                                      "id": "1f",
                                      "type": "single",
                                    },
                                    Object {
                                      "data": Object {
                                        "data": Object {
                                          "fn": [Function],
                                        },
                                        "group": "cmd",
                                        "id": "1i",
                                        "type": "filter",
                                      },
                                      "group": "step",
                                      "id": "1h",
                                      "type": "single",
                                    },
                                    Object {
                                      "data": Array [
                                        Object {
                                          "data": Object {
                                            "data": Object {
                                              "fn": [Function],
                                            },
                                            "group": "cmd",
                                            "id": "14",
                                            "type": "filter",
                                          },
                                          "group": "step",
                                          "id": "13",
                                          "type": "single",
                                        },
                                        Object {
                                          "data": Object {
                                            "data": Object {
                                              "store": Object {
                                                "current": 12,
                                                "id": "2",
                                              },
                                            },
                                            "group": "cmd",
                                            "id": "16",
                                            "type": "update",
                                          },
                                          "group": "step",
                                          "id": "15",
                                          "type": "single",
                                        },
                                        Object {
                                          "data": Array [],
                                          "group": "step",
                                          "id": "17",
                                          "type": "multi",
                                        },
                                      ],
                                      "group": "step",
                                      "id": "18",
                                      "type": "seq",
                                    },
                                    Object {
                                      "data": Array [],
                                      "group": "step",
                                      "id": "1j",
                                      "type": "multi",
                                    },
                                  ],
                                  "group": "step",
                                  "id": "1k",
                                  "type": "seq",
                                },
                              ],
                              "group": "step",
                              "id": "l",
                              "type": "multi",
                            },
                          ],
                          "group": "step",
                          "id": "m",
                          "type": "seq",
                        },
                        Object {
                          "data": Array [],
                          "group": "step",
                          "id": "x",
                          "type": "multi",
                        },
                      ],
                      "group": "step",
                      "id": "y",
                      "type": "seq",
                    },
                    Object {
                      "data": Array [
                        Object {
                          "data": Object {
                            "data": Object {
                              "fn": [Function],
                            },
                            "group": "cmd",
                            "id": "1m",
                            "type": "run",
                          },
                          "group": "step",
                          "id": "1l",
                          "type": "single",
                        },
                        Object {
                          "data": Array [],
                          "group": "step",
                          "id": "1n",
                          "type": "multi",
                        },
                      ],
                      "group": "step",
                      "id": "1o",
                      "type": "seq",
                    },
                  ],
                  "group": "step",
                  "id": "7",
                  "type": "multi",
                },
              ],
              "group": "step",
              "id": "8",
              "type": "seq",
            },
            Object {
              "data": Array [],
              "group": "step",
              "id": "b",
              "type": "multi",
            },
          ],
          "group": "step",
          "id": "c",
          "type": "seq",
        },
      ],
      "group": "step",
      "id": "3",
      "type": "multi",
    },
  ],
  "group": "step",
  "id": "4",
  "type": "seq",
}
`;

exports[`graphite: show bar 1`] = `
"Seq [
  1. emit {{
     fullName: foo → *
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. filter {{}},
           2. update {{
              store: {
                id: 1,
                current: foo | 1 | 11
              }
           }},
           3. [
              *  Seq [
                 1. compute {{}},
                 2. filter {{}},
                 3. Seq [
                    1. filter {{}},
                    2. update {{
                       store: {
                         id: 2,
                         current: 12
                       }
                    }},
                    3. [(empty list)]
                 ],
                 4. [(empty list)]
              ]
           ]
        ],
        4. [(empty list)]
     ],
     *  Seq [
        1. run {{}},
        2. [(empty list)]
     ]
  ]
]"
`;

exports[`graphite: show bar 2`] = `
"Seq [
  1. emit {{
     fullName: foo → *
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. filter {{}},
           2. update {{
              store: {
                id: 1,
                current: foo | 1 | 11
              }
           }},
           3. [
              *  Seq [
                 1. compute {{}},
                 2. filter {{}},
                 3. Seq [
                    1. filter {{}},
                    2. update {{
                       store: {
                         id: 2,
                         current: 12
                       }
                    }},
                    3. [(empty list)]
                 ],
                 4. [(empty list)]
              ]
           ]
        ],
        4. [(empty list)]
     ]
  ]
]"
`;

exports[`graphite: show foo 1`] = `
"Seq [
  1. emit {{
     fullName: foo
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. Seq [
           1. emit {{
              fullName: foo → *
           }},
           2. [
              *  Seq [
                 1. compute {{}},
                 2. filter {{}},
                 3. Seq [
                    1. filter {{}},
                    2. update {{
                       store: {
                         id: 1,
                         current: foo | 1 | 11 | 101
                       }
                    }},
                    3. [
                       *  Seq [
                          1. compute {{}},
                          2. filter {{}},
                          3. Seq [
                             1. filter {{}},
                             2. update {{
                                store: {
                                  id: 2,
                                  current: 18
                                }
                             }},
                             3. [(empty list)]
                          ],
                          4. [(empty list)]
                       ]
                    ]
                 ],
                 4. [(empty list)]
              ]
           ]
        ],
        3. [(empty list)]
     ]
  ]
]"
`;

exports[`graphite: show store1 1`] = `
"Seq [
  1. filter {{}},
  2. update {{
     store: {
       id: 1,
       current: foo | 1 | 11 | 101
     }
  }},
  3. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. filter {{}},
           2. update {{
              store: {
                id: 2,
                current: 18
              }
           }},
           3. [(empty list)]
        ],
        4. [(empty list)]
     ]
  ]
]"
`;

exports[`graphite: show store2 1`] = `
"Seq [
  1. filter {{}},
  2. update {{
     store: {
       id: 2,
       current: 18
     }
  }},
  3. [(empty list)]
]"
`;

exports[`graphite: store1 seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fn": [Function],
        },
        "group": "cmd",
        "id": "i",
        "type": "filter",
      },
      "group": "step",
      "id": "h",
      "type": "single",
    },
    Object {
      "data": Object {
        "data": Object {
          "store": Object {
            "current": "foo | 1 | 11 | 101",
            "id": "1",
          },
        },
        "group": "cmd",
        "id": "k",
        "type": "update",
      },
      "group": "step",
      "id": "j",
      "type": "single",
    },
    Object {
      "data": Array [
        Object {
          "data": Array [
            Object {
              "data": Object {
                "data": Object {
                  "fn": [Function],
                },
                "group": "cmd",
                "id": "1g",
                "type": "compute",
              },
              "group": "step",
              "id": "1f",
              "type": "single",
            },
            Object {
              "data": Object {
                "data": Object {
                  "fn": [Function],
                },
                "group": "cmd",
                "id": "1i",
                "type": "filter",
              },
              "group": "step",
              "id": "1h",
              "type": "single",
            },
            Object {
              "data": Array [
                Object {
                  "data": Object {
                    "data": Object {
                      "fn": [Function],
                    },
                    "group": "cmd",
                    "id": "14",
                    "type": "filter",
                  },
                  "group": "step",
                  "id": "13",
                  "type": "single",
                },
                Object {
                  "data": Object {
                    "data": Object {
                      "store": Object {
                        "current": 18,
                        "id": "2",
                      },
                    },
                    "group": "cmd",
                    "id": "16",
                    "type": "update",
                  },
                  "group": "step",
                  "id": "15",
                  "type": "single",
                },
                Object {
                  "data": Array [],
                  "group": "step",
                  "id": "17",
                  "type": "multi",
                },
              ],
              "group": "step",
              "id": "18",
              "type": "seq",
            },
            Object {
              "data": Array [],
              "group": "step",
              "id": "1j",
              "type": "multi",
            },
          ],
          "group": "step",
          "id": "1k",
          "type": "seq",
        },
      ],
      "group": "step",
      "id": "l",
      "type": "multi",
    },
  ],
  "group": "step",
  "id": "m",
  "type": "seq",
}
`;

exports[`graphite: store2 seq 1`] = `
Object {
  "data": Array [
    Object {
      "data": Object {
        "data": Object {
          "fn": [Function],
        },
        "group": "cmd",
        "id": "14",
        "type": "filter",
      },
      "group": "step",
      "id": "13",
      "type": "single",
    },
    Object {
      "data": Object {
        "data": Object {
          "store": Object {
            "current": 18,
            "id": "2",
          },
        },
        "group": "cmd",
        "id": "16",
        "type": "update",
      },
      "group": "step",
      "id": "15",
      "type": "single",
    },
    Object {
      "data": Array [],
      "group": "step",
      "id": "17",
      "type": "multi",
    },
  ],
  "group": "step",
  "id": "18",
  "type": "seq",
}
`;

exports[`showcase: event foo 1`] = `
"Seq [
  1. emit {{
     fullName: foo
  }},
  2. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. Seq [
           1. filter {{}},
           2. update {{
              store: {
                id: c,
                current: 3
              }
           }},
           3. [
              *  Seq [
                 1. compute {{}},
                 2. filter {{}},
                 3. run {{}}
              ]
           ]
        ],
        4. [(empty list)]
     ]
  ]
]"
`;

exports[`showcase: mapped 1`] = `
"Seq [
  1. filter {{}},
  2. update {{
     store: {
       id: f,
       current: 3
     }
  }},
  3. [
     *  Seq [
        1. run {{}},
        2. [(empty list)]
     ]
  ]
]"
`;

exports[`showcase: store a 1`] = `
"Seq [
  1. filter {{}},
  2. update {{
     store: {
       id: c,
       current: 3
     }
  }},
  3. [
     *  Seq [
        1. compute {{}},
        2. filter {{}},
        3. run {{}}
     ]
  ]
]"
`;
